[gd_scene load_steps=11 format=3 uid="uid://cq3c2m2ifbtxc"]

[ext_resource type="Script" path="res://scripts/node_2d.gd" id="1_3jjyw"]
[ext_resource type="Texture2D" uid="uid://cj5g5ihx588pn" path="res://assets/textures/bg.png" id="1_rvonu"]
[ext_resource type="PackedScene" uid="uid://b0tk86em4j8jp" path="res://scenes/player.tscn" id="2_5kj1i"]
[ext_resource type="PackedScene" uid="uid://bt3qfr20v3qvl" path="res://scenes/control.tscn" id="2_j2m3n"]
[ext_resource type="PackedScene" uid="uid://c3dtyjcnnsbvd" path="res://scenes/enemy_spawn.tscn" id="3_6481r"]
[ext_resource type="AudioStream" uid="uid://deamp7u3s7msy" path="res://assets/audio/hit.wav" id="6_lfyyp"]
[ext_resource type="AudioStream" uid="uid://ccnirediahwyl" path="res://assets/audio/explode.wav" id="7_jrd20"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5n6h7"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tvibo"]
bg_color = Color(0.6, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t6gtl"]
size = Vector2(175, 1077.75)

[node name="Game" type="Node2D"]
script = ExtResource("1_3jjyw")

[node name="ui" type="CanvasLayer" parent="."]

[node name="Control" parent="ui" instance=ExtResource("2_j2m3n")]

[node name="Bg" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1925.0
offset_bottom = 1083.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_rvonu")
expand_mode = 5
stretch_mode = 1

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 29.0
offset_top = 159.0
offset_right = 310.0
offset_bottom = 199.0
theme_override_styles/background = SubResource("StyleBoxFlat_5n6h7")
theme_override_styles/fill = SubResource("StyleBoxFlat_tvibo")
max_value = 3.0
step = 1.0
value = 3.0
show_percentage = false

[node name="Player" parent="." instance=ExtResource("2_5kj1i")]
position = Vector2(182, 525)

[node name="EnemySpawn" parent="." instance=ExtResource("3_6481r")]

[node name="DeathZone" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(-561, 540)
shape = SubResource("RectangleShape2D_t6gtl")

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_lfyyp")

[node name="PlayerDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_jrd20")

[connection signal="damage" from="Player" to="." method="_on_player_damage"]
[connection signal="enemy_spawn" from="EnemySpawn" to="." method="_on_enemy_spawn_enemy_spawn"]
[connection signal="path_enemy_spawn" from="EnemySpawn" to="." method="_on_enemy_spawn_path_enemy_spawn"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_death_zone_area_entered"]
